i18n/ja/docusaurus-plugin-content-docs/version-3.5.1/02-feature-guide/02-translation-engines.mdx
---
sidebar_position: 2
slug: /feature-guide/translation-engines
title: 翻訳エンジン
description: Available translation engines in VRCT
sidebar_label: 翻訳エンジン
---

# 翻訳エンジン

VRCTは複数の翻訳エンジンをサポートし、それぞれが独自の長所と特徴を備えています。あなたのニーズに合ったエンジンを選択できます。

## 概要
異なる翻訳エンジンは、速度、品質、言語サポート、プライバシーの面でさまざまな利点を提供しています。VRCTを使用すると、ローカルAIモデルやクラウドベースのサービスを含む一連のエンジンから選択できます。

## 翻訳エンジンを選択する方法

1. メインウィンドウで翻訳エンジン名領域をクリック
2. 利用可能なエンジンを表示する選択メニューが表示される
3. 使用したいエンジンを選択
4. 選択したエンジンが直ちに適用される

![Translation Engine Selection](./img/translation-engine-select.png)

:::info[v3.5.0: 非対応言語の扱い]
翻訳エンジンを切り替えたとき、そのエンジンが対応していない言語は自動的にデフォルトへフォールバックします。非対応の言語は言語選択リスト上でグレーアウト表示されます。
:::

## 利用可能なエンジン

### AI翻訳（デフォルト）

このエンジンは、CTranslate2ライブラリに基づいてローカルで実行されるAI翻訳モデルを使用します。

**モデル**：
- m2m100（100の言語をサポートするFacebookの多言語機械翻訳モデル。）
- nllb-200（200の言語をサポートするMetaの多言語機械翻訳モデル。）

:::info[v3.5.0での変更]
オフライン翻訳のデフォルトモデルが **NLLB-200 distilled 600M** に変更されました（従来はm2m100）。より軽量で、初回ダウンロードのサイズも小さくなっています。使用するモデルは[翻訳設定](/docs/config-translation)でいつでも変更できます。
:::

:::info[情報]
このエンジンを使用するには、AI翻訳モデルをダウンロードして構成する必要があります。  
詳細は[ctranslate2-モデルと設定](/docs/config-translation#ctranslate2-モデルと設定)ページを参照してください。
:::

**利点**：
- インターネット接続なしでオフラインで動作
- APIキーが不要
- 無料で使用可能
- 良好なプライバシー（外部サーバーにデータを送信しない）
- 100以上の言語をサポート

**欠点**：
- より多くのシステムリソースが必要
- クラウドベースのサービスより遅い場合がある
- 翻訳品質は言語ペアによって異なる場合がある

**最適な用途**：
- オフライン機能を望むユーザー
- プライバシーに敏感なユーザー
- 一般的なカジュアルな会話

**参照**：
- [Hugging Face - m2m100](https://huggingface.co/docs/transformers/model_doc/m2m_100)
- [Hugging Face - nllb-200](https://huggingface.co/docs/transformers/model_doc/nllb)

:::info[情報]
[翻訳設定](/docs/config-translation)で異なるAIモデルを選択できます。
:::

### Google翻訳

**利点**：
- 高速で信頼性が高い
- 多くの言語ペアに対する優れたサポート
- 無料枠が利用可能
- 優れたコンテキスト理解

**欠点**：
- インターネット接続が必要
- 限定的な無料使用（APIクォータ）
- プライバシー上の懸念（Googleサーバーにデータが送信される）

**最適な用途**：
- 一般的な翻訳
- 迅速な翻訳
- 広い言語サポート

### DeepL API

:::info[v3.5.0での変更]
Webスクレイピング版のDeepLは廃止され、**DeepL API版のみ**になりました。利用には[翻訳設定](/docs/config-translation#api)でDeepL APIキーの入力が必要です。
:::

**利点**：
- 高い翻訳品質
- 自然な翻訳
- 欧州言語に対する優れたサポート
- 優れたコンテキスト認識

**欠点**：
- インターネット接続が必要
- APIキーが必須（無料枠あり／超過分は従量課金）
- 他と比較して言語サポートが限定的

**最適な用途**：
- 専門的または重要なメッセージ
- 欧州言語ペア
- 品質を重視

### Bing翻訳（Microsoft）

**利点**：
- 高速な翻訳速度
- 優れた言語サポート
- 信頼性の高いサービス

**欠点**：
- インターネット接続が必要
- 限定的な無料使用（APIクォータ）

**最適な用途**：
- 速度と品質のバランス
- 日常的な信頼性の高い使用

### Papago（Naver）

**利点**：
- 韓国語、日本語、中国語に優れている
- アジア言語の優れた理解
- 東アジア言語の自然な翻訳

**欠点**：
- インターネット接続が必要
- 限定的な無料使用（APIクォータ）
- 特定の言語ペアに限定
- アジア言語に焦点

**最適な用途**：
- 韓国語、日本語、中国語を話す人とのコミュニケーション
- 東アジア言語ペア

### OpenAI API

**利点**：
- コンテキスト対応翻訳にLarge Language Models（LLMs）を使用
- 複雑な文を適切に処理可能
- AI進歩により継続的に改善

**欠点**：
- インターネット接続が必要
- APIキーが必要
- 使用量に応じて潜在的に高いコスト

**最適な用途**：
- コンテキスト対応翻訳が必要なユーザー
- 複雑またはニュアンスのあるメッセージ

### OpenAI互換エンドポイント

:::info[v3.5.0で追加]
OpenAI公式APIとは別に、**任意のOpenAI互換エンドポイント**を独立した翻訳プロバイダとして指定できるようになりました。
:::

**利点**：
- OpenAI互換APIを提供するサービス（各種クラウド／セルフホスト／ゲートウェイなど）をそのまま利用可能
- ベースURL・モデル名・APIキーを自由に指定できる
- LLMベースの文脈対応翻訳

**欠点**：
- インターネット接続（またはエンドポイントへの到達性）が必要
- エンドポイントによってはAPIキーが必要
- 応答形式や品質は接続先サービスに依存

**最適な用途**：
- 自前・社内のLLMゲートウェイを使いたいユーザー
- OpenAI以外のOpenAI互換サービスを使いたいユーザー

:::note
プロンプトや対応言語のカスタマイズ方法は[LLM翻訳エンジン — 詳細とカスタマイズ](/docs/feature-guide/llm-translation)を参照してください。
:::

### Gemini API

**利点**：
- Googleの最新Gemini LLMsを使用
- 優れたコンテキスト理解
- AI進歩により継続的に改善

**欠点**：
- インターネット接続が必要
- APIキーが必要
- 使用量に応じて潜在的に高いコスト

**最適な用途**：
- コンテキスト対応翻訳が必要なユーザー
- 複雑またはニュアンスのあるメッセージ

### Plamo API

**利点**：
- 日本語中心の翻訳にRinnaのPlamo LLMsを使用
- 日本語から他の言語へ、またはその逆の翻訳に優れている
- AI進歩により継続的に改善

**欠点**：
- インターネット接続が必要
- APIキーが必要
- 日本語中心の翻訳に限定

**最適な用途**：
- 日本語と他の言語間の翻訳を頻繁に行うユーザー

### LM Studio API

**利点**：
- LM Studioサーバーを使用したローカルAI翻訳
- 外部サーバーにデータが送信されない
- 優れたプライバシー

**欠点**：
- LM Studioサーバーのセットアップが必要
- より多くのシステムリソースが必要な場合がある
- 利用可能なLM Studioモデルによって制限される

**最適な用途**：
- プライバシーに敏感なユーザー
- LM Studioがセットアップされているユーザー

### Groq API

**利点**：
- 非常に高速な推論速度
- 複雑なテキストを効率的に処理
- AI進歩により継続的に改善
- コスト効率の良い価格設定

**欠点**：
- インターネット接続が必要
- APIキーが必要
- 比較的新しいサービス

**最適な用途**：
- 高速な翻訳が必要なユーザー
- コストを抑えたい場合
- リアルタイム翻訳が必要な場合

### Open Router API

**利点**：
- 複数のLLMプロバイダーにアクセス可能
- 柔軟なモデル選択
- 統一されたAPI
- コスト最適化オプション

**欠点**：
- インターネット接続が必要
- APIキーが必要
- プロバイダーの可用性に依存

**最適な用途**：
- 複数のLLMモデルを試したいユーザー
- 最適なコスト/パフォーマンスバランスを求めるユーザー
- 異なるLLMプロバイダーの比較が必要な場合

### Ollama API

**利点**：
- Ollamaサーバーを使用したローカルAI翻訳
- 外部サーバーにデータが送信されない
- 優れたプライバシー

**欠点**：
- Ollamaサーバーのセットアップが必要
- より多くのシステムリソースが必要な場合がある
- 利用可能なOllamaモデルによって制限される

**最適な用途**：
- プライバシーに敏感なユーザー
- Ollamaがセットアップされているユーザー

### その他のエンジン

VRCTは継続的にさらに多くの翻訳エンジンのサポートを追加しています。最新の利用可能なオプションについては、コンフィグウィンドウをチェックしてください。

:::note[v3.5.0]
Google / DeepL / Bing / Papago 系のWeb翻訳は translators ライブラリのフォーク版 6.0.4.2.5 に更新されました（Papago・Bingの対応改善を含む）。Bingのトークン取得時にJavaScript実行を行わないようになっています。
:::

## 適切なエンジンの選択

### 最高の品質のために
- **DeepL**: 欧州言語
- **Papago**: 韓国語、日本語、中国語
- **Google翻訳**: その他ほとんどの言語
- **OpenAI/Gemini**: コンテキスト対応翻訳
- **Plamo**: 日本語中心の翻訳
- **Groq**: 高速で高品質な翻訳
- **Open Router**: 複数モデルによる柔軟な翻訳

### プライバシーのために
- **AI翻訳**: 完全にオフラインで動作
- **LM Studio**: ローカルサーバーベースの翻訳
- **Ollama**: ローカルサーバーベースの翻訳

### 速度のために
- **Groq**: 最も高速な推論
- **Google翻訳**: 一般的に最速
- **Bing翻訳**: 一貫した速度
- **OpenAI/Gemini**: 優れたコンテキスト処理で高速

### 無料使用のために
- **AI翻訳**: APIキーが不要
- **Google翻訳**: 限定的な無料使用
- **Papago**: 限定的な無料使用
- **Bing翻訳**: 限定的な無料使用
- **Groq**: 限定的な無料使用と低コスト
- **Open Router**: 複数プロバイダーで無料オプション利用可能

## コンフィグレーション

### APIキー

いくつかの翻訳エンジンはAPIキーが必要です：

1. コンフィグウィンドウを開く
2. **翻訳**タブに移動
3. 希望するエンジンのAPIキーを入力
4. 設定を保存

詳細な構成については、[翻訳コンフィグガイド](/docs/config-translation)を参照してください。

### エンジン優先度

複数の対象言語を使用する場合、以下に基づいて各対象言語に異なるエンジンを設定できます：
- 言語ペアの互換性

## パフォーマンス考慮事項

### クラウドベースのエンジン
- 安定したインターネット接続が必要
- 翻訳速度はネットワークレイテンシーに依存
- 使用制限またはコストがある場合がある

### ローカルAIエンジン
- より多くのRAMとCPU/GPUリソースが必要
- ネットワークレイテンシーなし
- 無制限の使用
- 最初の使用時にモデルダウンロードが必要な場合がある

## トラブルシューティング

### エンジンが利用不可
- インターネット接続を確認（クラウドベースのエンジンの場合）
- APIキーが正しく構成されているか確認
- エンジンがあなたの言語ペアをサポートしているか確認

### 翻訳が遅い
- **クラウドエンジン**: ネットワーク接続を確認
- **AIエンジン**: システムリソースを確認（CPU/GPU/RAM使用率）

### 翻訳エラー
- APIキーの有効性を確認
- APIクォータ/制限を確認
- 別のエンジンに切り替えしてみる

## 関連機能

- [リアルタイム翻訳](./translation) - 翻訳機能について学ぶ
- [複数の対象言語](./multi-target-language) - 複数エンジンを同時に使用
- [翻訳設定](/docs/config-translation) - 翻訳エンジンの設定
